--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.head h1 {
+    font-size: 55px;
+    margin-bottom: 20px;
+}
+
 .head p {
     max-width: 600px;
 }
@@ -27,4 +32,29 @@
 
 .head button:hover{
     background-color: brown;
+}
+
+.hero{
+    display: flex;
+    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero .main-picture {
+    /* width: 80%; */
+    margin-bottom: 20px;
+    border-radius: 20px;
+    max-height: 500px;
+}
+
+.hero .sub-pictures {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.hero .sub-pictures img {
+    width: 22%;
+    border-radius: 20px;
 }
