--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     align-items: center;
     text-align: center;
     flex-direction: column;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .head h1 {
