--- a/2/styles.css
+++ b/2/styles.css
@@ -108,7 +108,7 @@ nav p {
 }
 
 .hero .main-picture {
-    width: 1312px;
+    width: 100%;
     margin-bottom: 20px;
     border-radius: 20px;
     /* max-height: 500px; */
@@ -122,7 +122,7 @@ nav p {
 }
 
 .hero .sub-pictures img {
-    width: 411px;
+    width: 31.5%;
     border-radius: 32px;
 }
 
@@ -185,6 +185,33 @@ nav p {
     nav.active {
         display: flex;
     }
+
+    .hero{
+        display: flex;
+        margin-top: 110px;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .hero .main-picture {
+        width: 100%;
+        margin-bottom: 20px;
+        border-radius: 20px;
+        /* max-height: 500px; */
+    }
+    
+    .hero .sub-pictures {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        
+    }
+    
+    .hero .sub-pictures img {
+        width: 31.5%;
+        border-radius: 32px;
+    }
+    
 }
 
 @media (max-width: 480px) {
